--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700|Lato" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
