--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700|Lato" rel="stylesheet">
-    <title>React App</title>
+    <title>GDQ Timer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
